# autopsy

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  WALKTHROUGH.md  pyproject.toml  skills-lock.json
.claude/: CLAUDE.md
.claude/skills/: animotion  do-item
.cursor/commands/: experiment.md
.devtool/features/: codelens-can-be-stale-2026-03-03.md  de-identify-autopsyprint-ablation-2026-03-01.md  dragging-a-treeview-key-to-create-a-new-computed-c-2026-02-27.md  filter-menu-on-the-right-edge-of-the-streams-view--2026-02-27.md  fix-test-view-dropdown-2026-02-27.md  (+4 more)
autopsy/: __init__.py  autopsy_result.py  call_stack.py  json_utils.py  live.html  live_server.py  pytest.py  report.py  template.html
autopsy_html/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
autopsy_vscode/: QUICK_START.md  README.md  autopsy-viewer-0.0.1.vsix  package-lock.json  package.json
examples/: __init__.py  conftest.py  generate.py  generate_report_demo.py  kv_store_example.py  minimal_live_test.py  order_pipeline.py  price_calculator.py  test_price_calculator.py  test_pytest_demo.py
experiments/: frameinfo_after_return.py  frameinfo_mutability.py  frameinfo_pickling.py  nested_function_reference.py  pickle_isolated_environment.py
logger/: __init__.py
talk/: .gitignore  example.ipynb  example.json  example.py  outline.md  package-lock.json  package.json  speaker_notes.md  vite.config.ts
talk/src/: app.d.ts
tests/: conftest.py  test_basic_log.py  test_call_stack.py  test_fibonacci.py  test_nested_calls.py
tracer/: __init__.py
(+92 files in other folders)
