[project]
name = "autopsy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
live = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.entry-points.pytest11]
autopsy = "autopsy.pytest"

[tool.setuptools]
packages = ["autopsy"]
package-data = {"autopsy" = ["template.html", "dist-live/**/*"]}

[tool.pytest]
testpaths=[
    "tests"
]